# enchiridion-pi

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1662900747318.mjs  vite.config.ts.timestamp-1672024453842.mjs
app/: Cargo.toml  index.html
app/public/: glue.js  main.css
app/src/: main.rs
app/src/hooks/: mod.rs  use_interval.rs  use_mut_latest.rs
camera/: main.py
desktop-app/: package-lock.json  package.json
scripts/: setup.sh
src/: App.tsx  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20221207175717_create_table_device.sql  20221208080923_create_announcement_table.sql  20221208092451_alter_device_table_add_device_id_column.sql  20221209030225_alter_table_announcement_add_attribute_media_column.sql
src-tauri/src/: app.rs  commands.rs  consumer.rs  device.rs  events.rs  main.rs  util.rs
src-tauri/src/announcement/: announcement_consumer.rs  error.rs  mod.rs  service.rs
src-tauri/src/api/: api.rs  definition.rs  mod.rs
src-tauri/src/appconfig/: appconfig.rs  mod.rs
src-tauri/src/config/: config.rs
src-tauri/src/consumer/announcement/: consumer.rs  definition.rs  mod.rs
src-tauri/src/device/: device.rs
src-tauri/src/domain/: announcement.rs  device.rs  mod.rs
src-tauri/src/queue/: consumer.rs  mod.rs  producer.rs
src-tauri/src/repositories/: announcement.rs  device.rs
src-tauri/src/services/: announcement.rs  device.rs
src-tauri/src/settings/: Settings.toml  settings.rs
src-tauri/src/status/: poll.rs
(+31 files in other folders)
