[package]
name = "app"
version = "0.1.0"
description = "Beesmart desktop application"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.0", features = ["api-all", "cli"] }
tokio = { version = "1.19.1", features = ["time"] }
deadpool-redis = { version = "0.10.2" }
redis = { version = "0.21", default-features = false, features = ["acl", "aio", "script", "geospatial", "streams"] }
reqwest = { version = "0.11.11", features = ["json"] }
log = "0.4.17"
chrono = "0.4.22"
online = "4.0.0"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
features = ["colored"]
branch = "dev"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
